fix(header): ensure the image is not stretched (#31)
It apparently slipped through a stretching of the image that I did not
intend to actually happen. Let's address this issue!

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,8 +8,8 @@
 }
 
 .most-header-logo {
-    height: 50px;
     width: auto;
+    object-fit: contain;
 }
 
 .most-header-title {
